[package]
name = "sui-subnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avalanche-types = { version = "0.0.398", features = ["subnet", "codec_base64"] }
sui-cluster-test.workspace = true
tokio.workspace = true
anyhow.workspace = true
sui-faucet.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
futures = { workspace = true }
rand = { workspace = true }
bcs = { workspace = true }
tonic = { version = "0.8.3", features = ["gzip"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93" # https://github.com/serde-rs/json/releases
serde_with = { version = "2.2.0", features = ["hex"] }
hex = "0.4.3"
bytes = "1.4.0"
chrono = "0.4.23"
derivative = "2.2.0"
log = "0.4.17"
env_logger = "0.10.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0.0"